--- a/for websearch/websearch.html
+++ b/for websearch/websearch.html
@@ -4,7 +4,10 @@
     <title>Websearch</title>
 </head>
 <body>
-  <center><input type ="text" name="searchbar"></center>  
+ <center> <img src="/images/123.jpg" width ="15%"></center>
+  <center><input type ="text" name="searchbar" width ="20%"></center> 
+  <br>
+  <center><input type="submit" name="searchbar"></center> 
 </body>
 </html>
 
