--- a/for websearch/websearch.html
+++ b/for websearch/websearch.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="shortcut icon" href="/images/123.jpg" type="image/x-icon">
     <title>Websearch</title>
 </head>
 <body>
- <center> <img src="/images/123.jpg" width ="15%"></center>
-  <center><input type ="text" name="searchbar" width ="20%"></center> 
+ <center> <h1> WEBSEARCH!</h1></center>
+ <center> <img src="/images/123.jpg" width ="15%"></center> 
+  <center><input type ="text" placeholder="Search here!" ></center> 
   <br>
   <center><input type="submit" name="searchbar"></center> 
 </body>
