removed social media
removed social media

--- a/index.html
+++ b/index.html
@@ -70,13 +70,10 @@
 			</nav>
 
 			<div class="colorlib-footer">
-				<p><small> Made <i class="icon-briefcase3" aria-hidden="true"></i> by <a href="#" target="_blank">Chris Joshua Macalalad</a>
+				<p><small> Made <i class="icon-briefcase3" aria-hidden="true"></i> by Chris Joshua Macalalad</a>
  </span> <span>LinkedIn <a href="https://www.linkedin.com/in/chris-joshua-macalalad-975aa417a/" target="_blank">Chris Joshua Macalalad</a></span> &copy;Copyright 2023-2025 All rights reserved.</small></p>
 				<ul>
-					<li><a href="#"><i class="icon-facebook2"></i></a></li>
-					<li><a href="#"><i class="icon-twitter2"></i></a></li>
-					<li><a href="#"><i class="icon-instagram"></i></a></li>
-					<li><a href="#"><i class="icon-linkedin2"></i></a></li>
+		
 				</ul>
 			</div>
 
