mobile white screen fix

--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
 		</style>
 	<div id="colorlib-page">
 		<div class="container-wrap">
-		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
+		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"  data-target="#navbar" aria-expanded="true" aria-controls="navbar"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 			<div class="text-center">
 				<div class="author-img" style="background-image: url(/images/1234.jpg);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Chris Joshua Macalalad</a></h1>
-				<span class="position"><a href="#">Computer Engineer</a> in Philippines</span>
+				<span class="position"> Computer Engineer in Philippines</span>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
